Closed
Bug 1660918
Opened 5 years ago
Closed 5 years ago
Fix nsIPrintSettings.clone() to copy all members
Categories
(Core :: Printing: Setup, defect, P2)
Core
Printing: Setup
Tracking
()
RESOLVED
FIXED
82 Branch
People
(Reporter: jwatt, Assigned: jwatt)
References
Details
(Whiteboard: [print2020_v81])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
No description provided.
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by jwatt@jwatt.org:
https://hg.mozilla.org/integration/autoland/rev/21925e313c1f
Fix nsIPrintSettings.clone() to copy all members. r=nordzilla
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
| Assignee | ||
Comment 4•5 years ago
|
||
Comment on attachment 9171826 [details]
Bug 1660918. Fix nsIPrintSettings.clone() to copy all members. r=nordzilla
Beta/Release Uplift Approval Request
- User impact if declined: Printing project blocker.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This code is not currently exercised, but once the frontend starts using it it just means we don't forget to copy some data members when cloning.
- String changes made/needed:
Attachment #9171826 -
Flags: approval-mozilla-beta?
Comment 5•5 years ago
|
||
Comment on attachment 9171826 [details]
Bug 1660918. Fix nsIPrintSettings.clone() to copy all members. r=nordzilla
Approved for 81.0b2.
Attachment #9171826 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•5 years ago
|
||
| bugherder uplift | ||
status-firefox81:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•