Bug 1660918. Fix nsIPrintSettings.clone() to copy all members. r=nordzilla, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D88094